Bug 1303015 - Update assertions now CCWs can be allocated in the nursery. r=terrence, a=gchang